wrote skeleton html

--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,21 @@
 /* Add CSS styling here */
+* {
+    /* border: 1px solid gray; */
+}
+
+.gallery {
+    display:flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-around;
+    align-content: center;
+    align-items:center;
+    height: 500px;
+}
+
+.gallery img {
+    justify-items: space-around;
+    width: 20%;
+    
+    
+}
