--- a/style/index.css
+++ b/style/index.css
@@ -18,6 +18,7 @@
 
 body {
     background: #2f3031;
+    box-sizing: border-box;
 }
 
 * {
@@ -106,7 +107,6 @@ header nav a:hover {
     display:flex;
     flex-flow: row wrap;
     width: 80vw;
-    height: 80vh;
     justify-content: space-evenly;
     align-content: space-evenly;
     margin: 0% 10% 0% 10%;
