Made base CSS units responsive

--- a/style/index.css
+++ b/style/index.css
@@ -32,13 +32,12 @@ header {
 
 h1 {
     margin-left: 20px;
-    font-size: 50px;
+    font-size: 4rem;
     text-shadow: 2px 2px black;
 }
 
 header nav {
     display: flex;
-    height: 50px;
     justify-content: space-evenly;
     animation: 2s ease-in slideinl;
 }
@@ -48,25 +47,24 @@ header nav a {
     text-decoration: none;
     font-family: Impact;
     background: lightgray;
-    height: 40px;
-    width: 150px;
+    height: 90%;
+    width: 15%;
     text-align: center;
     color: black;
     transition: .5s;
 }
 
 header nav a:hover {
-    font-size: 2rem;
-    width: 200px;
+    width: 20%;
 }
 
 .intro {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px 20px;
+    margin: 2% 4%;
     border: 5px solid black;
-    padding: 0px 60px;
+    padding: 0 5%;
     background: url(https://images.freecreatives.com/wp-content/uploads/2016/02/Free-Seamless-Carbon-Fiber-Texture.jpg);
     animation: 1s slideinr;
 }
@@ -84,11 +82,11 @@ header nav a:hover {
 }
 
 .intro #text h2 {
-    font-size: 40px;
+    font-size: 3rem;
 }
 
 .intro #text a {
-    padding: 10px;
+    padding: 3%;
     background: lightgray;
     color: black;
     text-decoration: none;
@@ -96,7 +94,7 @@ header nav a:hover {
 }
 
 .intro #text a:hover {
-    padding: 12px 30px;
+    padding: 4%;
 }
 
 .intro #text p {
@@ -115,29 +113,25 @@ header nav a:hover {
 
 .gallery .photo {
     display: flex;
-    width: 300px;
-    height: 200px;
-    margin: 20px;
+    width: 20vh;
+    height: 20vh;
+    margin: 3%;
     background: url(https://picsum.photos/536/354);
     justify-content: center;
     align-items: flex-end;
     transition: .3s;
 }
 
-.gallery .photo img {
-    width: 100%;
-    height: 100%;
-}
-
 .gallery .photo:hover {
-    width: 350px;
-    height: 250px;
+    width: 30vh;
+    
 }
 
 .gallery .photo .popup {
     font-size: 2rem;
     text-shadow: 2px 2px black;
     opacity: 0;
+    transition: 1s;
 }
 
 .gallery .photo:hover .popup {
@@ -147,19 +141,19 @@ header nav a:hover {
 footer {
     background: url(https://images.freecreatives.com/wp-content/uploads/2016/02/Free-Seamless-Carbon-Fiber-Texture.jpg);
     text-align: center;
+    padding: .5%;
     animation: 1s slideinr;
 }
 
 footer h3 {
-    font-size: 50px;
+    font-size: 3rem;
     font-family: fantasy;
-    letter-spacing: 7px;
-    margin-top: 5px;
+    letter-spacing: 10px;
 }
 
 footer a {
-    padding: 10px;
-    margin: 10px;
+    padding: 1%;
+    margin: 5%;
     background: lightgray;
     text-decoration: none;
     color: black;
@@ -177,3 +171,8 @@ footer p .social {
     text-decoration: none;
     color: white;
 }
+
+/*tablet sizing styles*/
+
+
+/*phone sizing styles*/
